--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Personal website of Alejandro J. Foucault (ajfm88), featuring projects and portfolio work."
+    />
     <title>Alejandro J. Foucault | ajfm88</title>
   </head>
   <body>
